# gtocx

./: CMakeLists.txt  Makefile  README.md  compile  dd  force_driv.f90  gtoc_test  list  module.f90  module_mod.mod  read_stars.f90  run  test.f90
doc/: dist-0-x.eps  dist-0-y.eps  dist-0-z.eps  readme.md
src/: Makefile  error.f90  force_driv.f90  init.f90  main.f90  make.dep  make.flags  module.f90  module_mod.mod  modules.flags  propag.f90  propag_validator.f90  read_stars.f90  star_state.f90  statistics.f90  test.f90
src/ksglib/: Makefile  ksgcos.f  ksgdr.f  modules.flags  remark.f  sgstep.f  sgstrt.f  ut2ksg.f
